<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life Counter</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="lives">Number of Lives: </string>
    <string name="action_settings">Settings</string>

</resources>
