<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/lifecounter">

    <Button
        android:id="@+id/buttonPF_P1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="+5"
        android:layout_alignBottom="@id/buttonPO_P1"
        android:layout_toRightOf="@id/buttonPO_P1"
        android:layout_toEndOf="@id/buttonPO_P1"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/player_1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lives"
        android:id="@+id/livesP1"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@id/buttonPO_P1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="+"
        android:layout_below="@+id/livesP1"
        android:layout_toRightOf="@id/buttonMO_P1"
        android:layout_toEndOf="@id/buttonMO_P1"
        android:textSize="20dp" />

    <Button
        android:id="@id/buttonMO_P1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="-"
        android:layout_alignTop="@id/buttonMF_P1"
        android:layout_toRightOf="@id/buttonMF_P1"
        android:layout_toEndOf="@id/buttonMF_P1"
        android:textSize="20dp" />

    <Button
        android:id="@id/buttonMF_P1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="-5"
        android:layout_alignTop="@id/buttonPO_P1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dead"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/player_2"
        android:id="@+id/textView2"
        android:layout_below="@id/buttonMO_P1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lives"
        android:id="@+id/livesP2"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="-5"
        android:id="@+id/buttonMF_P2"
        android:layout_below="@+id/livesP2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="-"
        android:id="@+id/buttonMO_P2"
        android:layout_alignBottom="@+id/buttonMF_P2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:textSize="20dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="+"
        android:id="@+id/buttonPO_P2"
        android:textSize="20dp"
        android:layout_alignTop="@+id/buttonMO_P2"
        android:layout_toRightOf="@+id/buttonMO_P2"
        android:layout_toEndOf="@+id/buttonMO_P2" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="+5"
        android:id="@+id/buttonPF_P2"
        android:layout_alignBottom="@+id/buttonPO_P2"
        android:layout_toRightOf="@id/buttonPO_P1"
        android:layout_toEndOf="@id/buttonPO_P1"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/player_3"
        android:id="@+id/textView3"
        android:layout_below="@+id/buttonMF_P2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lives"
        android:id="@+id/livesP3"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-5"
        android:id="@+id/buttonMF_P3"
        android:textSize="20dp"
        android:layout_below="@+id/livesP3"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="-"
        android:id="@+id/buttonMO_P3"
        android:layout_alignBottom="@+id/buttonMF_P3"
        android:layout_toRightOf="@+id/buttonMF_P3"
        android:layout_toEndOf="@+id/buttonMF_P3"
        android:textSize="20dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="+"
        android:id="@+id/buttonPO_P3"
        android:layout_alignBottom="@+id/buttonMO_P3"
        android:layout_toRightOf="@+id/buttonMO_P3"
        android:layout_toEndOf="@+id/buttonMO_P3"
        android:textSize="20dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="+5"
        android:id="@+id/buttonPF_P3"
        android:layout_alignBottom="@+id/buttonPO_P3"
        android:layout_toRightOf="@+id/buttonPO_P3"
        android:layout_toEndOf="@+id/buttonPO_P3"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/player_4"
        android:id="@+id/textView4"
        android:layout_below="@+id/buttonMF_P3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lives"
        android:id="@+id/livesP4"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="-5"
        android:id="@+id/buttonMF_P4"
        android:layout_below="@+id/livesP4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="-"
        android:id="@+id/buttonMO_P4"
        android:layout_alignBottom="@+id/buttonMF_P4"
        android:layout_toRightOf="@+id/buttonMF_P4"
        android:layout_toEndOf="@+id/buttonMF_P4"
        android:textSize="20dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="+"
        android:id="@+id/buttonPO_P4"
        android:layout_alignBottom="@+id/buttonMO_P4"
        android:layout_toRightOf="@+id/buttonMO_P4"
        android:layout_toEndOf="@+id/buttonMO_P4"
        android:textSize="20dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="+5"
        android:id="@+id/buttonPF_P4"
        android:layout_alignBottom="@+id/buttonPO_P4"
        android:layout_toRightOf="@+id/buttonPO_P4"
        android:layout_toEndOf="@+id/buttonPO_P4"
        android:textSize="20dp" />





</RelativeLayout>
